force-app/main/default/objects/Coding_User__c/Coding_User__c.object-meta.xml
<CustomObject>
    <label>Coding User</label>
    <nameField>
        <displayFormat>CU-{0000}</displayFormat>
        <label>Coding User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coding Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>