force-app/main/default/objects/Coding_User__c/fields/Avatar_URL__c.field-meta.xml
<CustomField>
    <fullName>Avatar_URL__c</fullName>
    <description>Public avatar image URL for user profile</description>
    <label>Avatar URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>