force-app/main/default/objects/Coding_User__c/fields/CodeChef_Username__c.field-meta.xml
<CustomField>
    <fullName>CodeChef_Username__c</fullName>
    <label>CodeChef Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>