force-app/main/default/objects/Coding_User__c/fields/Current_Streak__c.field-meta.xml
<CustomField>
    <fullName>Current_Streak__c</fullName>
    <label>Current Streak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>