force-app/main/default/objects/Coding_User__c/fields/Last_Daily_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Daily_Email_Sent__c</fullName>
    <label>Last Daily Email Sent</label>
    <type>DateTime</type>
</CustomField>