force-app/main/default/objects/Coding_User__c/fields/Last_Nudge_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Nudge_Sent_Date__c</fullName>
    <label>Last Nudge Sent Date</label>
    <type>Date</type>
</CustomField>