force-app/main/default/objects/Coding_User__c/fields/Last_Solved_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Solved_Date__c</fullName>
    <label>Last Solved Date</label>
    <type>Date</type>
</CustomField>