force-app/main/default/objects/Coding_User__c/fields/LeetCode_Username__c.field-meta.xml
<CustomField>
    <fullName>LeetCode_Username__c</fullName>
    <label>LeetCode Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>