force-app/main/default/objects/Coding_User__c/fields/Longest_Streak__c.field-meta.xml
<CustomField>
    <fullName>Longest_Streak__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Longest Streak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>