force-app/main/default/objects/Coding_User__c/fields/Morning_Summary_Time__c.field-meta.xml
<CustomField>
    <fullName>Morning_Summary_Time__c</fullName>
    <label>Morning Summary Time</label>
    <type>Time</type>
</CustomField>