force-app/main/default/objects/Coding_User__c/fields/Motivation_Emails__c.field-meta.xml
<CustomField>
    <fullName>Motivation_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motivation Emails</label>
    <type>Checkbox</type>
</CustomField>