force-app/main/default/objects/Coding_User__c/fields/Reminder_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Enabled</label>
    <type>Checkbox</type>
</CustomField>