force-app/main/default/objects/Coding_User__c/fields/Reminder_Time__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Time__c</fullName>
    <label>Reminder Time</label>
    <type>Time</type>
</CustomField>