force-app/main/default/objects/Coding_User__c/fields/Total_Solved__c.field-meta.xml
<CustomField>
    <fullName>Total_Solved__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Solved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>